--- a/package.json
+++ b/package.json
@@ -3,20 +3,22 @@
     "version": "0.1.0",
     "description": "Send messages to Microsoft Teams and Office 365 Groups",
     "scripts": {
-        "copy-vsts-task-lib": "copyfiles node_modules/vsts-task-lib/**/* PostToOffice365Connector",
-        "copy-request": "copyfiles node_modules/request/**/* PostToOffice365Connector",
-        "copy-form-data": "copyfiles node_modules/form-data/**/* PostToOffice365Connector",
+        "copy-vsts-task-lib": "copyfiles node_modules/azure-pipelines-task-lib/**/* node_modules/request/**/* node_modules/form-data/**/* node_modules/minimatch/**/* node_modules/brace-expansion/**/* node_modules/shelljs/**/* node_modules/concat-map/**/* node_modules/balanced-match/**/* node_modules/uuid/**/* node_modules/semver/**/* node_modules/q/**/* node_modules/extend/**/* node_modules/tough-cookie/**/* node_modules/psl/**/* node_modules/json-stringify-safe/**/* node_modules/safe-buffer/**/* node_modules/aws-sign2/**/* node_modules/aws4/**/* node_modules/http-signature/**/* node_modules/assert-plus/**/* node_modules/sshpk/**/* node_modules/safer-buffer/**/* node_modules/asn1/**/* PostToOffice365Connector",
+        "copy-node-modules": "copyfiles node_modules/**/* PostToOffice365Connector",
         "tsc": "tsc",
-        "build": "npm run copy-request | npm run copy-form-data | npm run copy-vsts-task-lib | npm run tsc"
+        "package": "tfx extension create --manifest-globs vss-extension.json",
+        "build": "npm run copy-node-modules | npm run tsc"
     },
     "dependencies": {
-        "request": "^2.74.0",
-        "vsts-task-lib": "^1.1.0",
-        "form-data": "^2.1.2"
+        "azure-pipelines-task-lib": "^2.10.0",
+        "form-data": "^2.1.2",
+        "request": "^2.74.0"
     },
     "devDependencies": {
-        "typescript": "2.3.4",
-        "typings": "*"
+        "@types/node": "^14.6.0",
+        "@types/request": "^2.48.5",
+        "copyfiles": "^2.3.0",
+        "typescript": "^2.4.1"
     },
     "preferGlobal": false,
     "private": true,
