Update ci.yml for Azure Pipelines

--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -10,6 +10,9 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+- script: npm install
+  displayName: 'Install NPSM packages'
+
 - script: npm run build
   displayName: 'Build'
 
