--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -11,13 +11,13 @@ pool:
 
 steps:
 - script: npm install
-  displayName: 'Install NPSM packages'
+  displayName: 'Install NPM packages'
 
 - script: npm run build
   displayName: 'Build'
 
-- script: npm run publish
-  displayName: 'Publish'
+- script: npm run package
+  displayName: 'Package'
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
