--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@types/node": "^14.6.0",
         "@types/request": "^2.48.5",
         "copyfiles": "^2.3.0",
+        "tfx-cli": "^0.8.2",
         "typescript": "^2.4.1"
     },
     "preferGlobal": false,
