--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -35,8 +35,9 @@ steps:
     rootFolder: 
     publisherId: 'freerangeeggs-dev'
     extensionName: '[Dev] Post To Office 365 Connector'
-    extensionVersion: '$(version.major).$(version.minor).$(Build.BuildId)'
+    extensionVersion: '$(version.major).$(version.minor).$(version.revision)'
     updateTasksVersion: true
+    outputPath: '$(Build.ArtifactStagingDirectory)'
 
 - task: PackageAzureDevOpsExtension@3
   displayName: 'Package for prod'
@@ -44,12 +45,11 @@ steps:
     rootFolder: 
     publisherId: 'freerangeeggs'
     extensionName: 'Post To Office 365 Connector'
-    extensionVersion: '$(version.major).$(version.minor).$(Build.BuildId)'
+    extensionVersion: '$(version.major).$(version.minor).$(version.revision)'
     updateTasksVersion: true
+    outputPath: '$(Build.ArtifactStagingDirectory)'
   
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)//*vsix'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
     ArtifactName: 'packages'
-    publishLocation: 'Container'
-    
