--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -80,7 +80,7 @@ stages:
     - publish: '$(Build.ArtifactStagingDirectory)'
       artifact: 'packages'
 
-- stage: Deploy
+- stage: DeployDev
   jobs:
   - deployment: DeployDev
     displayName: Deploy to Dev
@@ -98,6 +98,9 @@ stages:
             inputs:
               version: 'v0.7.x'
 
+- stage: DeployProd
+  dependsOn: 'DeployDev'
+  jobs:
   - deployment: DeployProd
     displayName: Deploy to Prod
     pool:
