--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -81,6 +81,7 @@ stages:
       artifact: 'packages'
 
 - stage: DeployDev
+  displayName: 'Deploy to Development'
   jobs:
   - deployment: DeployDev
     displayName: Deploy to Dev
@@ -99,6 +100,7 @@ stages:
               version: 'v0.7.x'
 
 - stage: DeployProd
+  displayName: 'Deploy to Production'
   dependsOn: 'DeployDev'
   jobs:
   - deployment: DeployProd
