--- a/pipelines/ci.yml
+++ b/pipelines/ci.yml
@@ -107,7 +107,7 @@ stages:
               connectTo: 'VsTeam'
               connectedServiceName: 'VS Marketplace - Dev'
               fileType: 'vsix'
-              vsixFile: 'packages/$(publisher.id.development).PostToOffice365Connector-$(version.major).$(version.minor).$(version.revision).vsix'
+              vsixFile: '../packages/$(publisher.id.development).PostToOffice365Connector-$(version.major).$(version.minor).$(version.revision).vsix'
               updateTasksVersion: false
 
 - stage: DeployProd
