--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "build": "npm run copy-node-modules | npm run tsc"
     },
     "dependencies": {
-        "applicationinsights": "^2.1.3",
+        "@microsoft/applicationinsights-web": "^3.3.0",
         "azure-pipelines-task-lib": "^3.4.0",
         "form-data": "^4.0.0",
         "request": "^2.88.2"
