--- a/package.json
+++ b/package.json
@@ -12,12 +12,10 @@
     "dependencies": {
         "@microsoft/applicationinsights-web": "^3.3.0",
         "azure-pipelines-task-lib": "^4.13.0",
-        "form-data": "^4.0.0",
-        "request": "^2.88.2"
+        "form-data": "^4.0.0"
     },
     "devDependencies": {
         "@types/node": "^16.0.0",
-        "@types/request": "^2.48.5",
         "copyfiles": "^2.4.1",
         "typescript": "^4.3.5"
     },
