--- a/pipelines/test.yml
+++ b/pipelines/test.yml
@@ -9,7 +9,7 @@ stages:
   jobs:
   - job: 'test'
     steps:
-    - task: freerangeeggs-dev.PostToOffice365Connector-dev.PostToOffice365Connector-Task.PostToOffice365Connector@1
+    - task: freerangeeggs.PostToOffice365Connector.PostToOffice365Connector-Task.PostToOffice365Connector@1
       inputs:
         url: '$(TeamsWebhookUrl)'
         title: 'Test post'
@@ -22,7 +22,7 @@ stages:
   jobs:
   - job: 'test'
     steps:
-    - task: freerangeeggs-dev.PostToOffice365Connector-dev.PostToOffice365Connector-Task.PostToOffice365Connector@1
+    - task: freerangeeggs.PostToOffice365Connector.PostToOffice365Connector-Task.PostToOffice365Connector@1
       inputs:
         url: '$(TeamsWebhookUrl)'
         title: 'Test post'
@@ -35,7 +35,7 @@ stages:
   jobs:
   - job: 'test'
     steps:
-    - task: freerangeeggs-dev.PostToOffice365Connector-dev.PostToOffice365Connector-Task.PostToOffice365Connector@1
+    - task: freerangeeggs.PostToOffice365Connector.PostToOffice365Connector-Task.PostToOffice365Connector@1
       inputs:
         url: '$(OutlookWebhookUrl)'
         title: 'Test post'
